--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-* {
-  box-sizing: border-box;
+body {
 }
-
 
 h1,
 h2,
@@ -13,23 +11,13 @@ p {
   margin: 0;
 }
 
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
-  list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
 }
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  /* max-width: 100%; */
 }
