--- a/src/components/GenAuthForm/GenAuthForm.module.css
+++ b/src/components/GenAuthForm/GenAuthForm.module.css
@@ -1,4 +1,146 @@
+.genDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f8f8;
+
+}
+
+
+
 .img {
   width: 247px;
   height: 191px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  margin-bottom: 8px;
+  
+}
+
+.h {
+  font-family: "MacPaw Fixel Display", sans-serif;
+font-weight: 600;
+font-size: 30px;
+line-height: 1.06667;
+letter-spacing: -0.02em;
+color: #121417;
+margin-bottom: 16px;
+}
+
+.p {
+  font-family: "MacPaw Fixel Display", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+color: rgba(18, 20, 23, 0.8);
+margin-bottom: 16px;
+padding-right: 4px;
+
+}
+
+.loginLi {
+  /* display: flex; */
+  margin-block-start: 0;
+  margin-block-end: 0;
+  font-family: "MacPaw Fixel Display", sans-serif;
+font-weight: 400;
+font-size: 14px;
+text-align: center;
+color: rgba(18, 20, 23, 0.8);
+margin-bottom: 46px;
+margin-top: 8px;
+
+}
+
+.form {
+  border-radius: 25px 25px 0 0;
+width: 100%;
+max-width: 375px;
+/* height: 549px; */
+background-color: rgba(133, 170, 159, 0.1);
+padding: 32px 16px;
+/* display: flex;
+flex-direction: column;
+align-items: center; */
+}
+
+.input {
+  padding-block: 0;
+padding-inline: 0;
+  margin-bottom: 14px;
+  border: 1px solid rgba(18, 20, 23, 0.1);
+border-radius: 15px;
+padding: 16px 18px;
+width: 100%;
+height: 56px;
+
+
+}
+
+.passwordInput {
+  padding-block: 0;
+padding-inline: 0;
+  border: 1px solid rgba(18, 20, 23, 0.1);
+border-radius: 15px;
+padding: 16px 18px;
+width: 100%;
+height: 56px;
+
+
+
+}
+
+.eye {
+  position: absolute;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  border: none;
+  stroke: "#121417";
+}
+
+.passwordLabel {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.btn {
+  margin-top: 32px;
+  border-radius: 30px;
+padding-top: 16px;
+padding-bottom: 16px;
+width: 100%;
+height: 56px;
+font-family: "MacPaw Fixel Display", sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.5;
+color: #fcfcfc;
+margin-bottom: 16px;
+background-color: #85aa9f;
+border: none;
+cursor: pointer;
+}
+
+.toggleP {
+  font-family: "MacPaw Fixel Display", sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.5;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: rgba(18, 20, 23, 0.5);
+cursor: pointer;
+/* margin-left: 40vw; */
+/* display: block; */
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 57px;
 }
