--- a/src/components/GenAuthForm/GenAuthForm.module.css
+++ b/src/components/GenAuthForm/GenAuthForm.module.css
@@ -4,10 +4,8 @@
   justify-content: center;
   align-items: center;
   background-color: #f8f8f8;
-
+  position: relative;
 }
-
-
 
 .img {
   width: 247px;
@@ -18,28 +16,26 @@
   justify-content: center;
   align-items: center; */
   margin-bottom: 8px;
-  
 }
 
 .h {
   font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 600;
-font-size: 30px;
-line-height: 1.06667;
-letter-spacing: -0.02em;
-color: #121417;
-margin-bottom: 16px;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 1.06667;
+  letter-spacing: -0.02em;
+  color: #121417;
+  margin-bottom: 16px;
 }
 
 .p {
   font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-color: rgba(18, 20, 23, 0.8);
-margin-bottom: 16px;
-padding-right: 4px;
-
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgba(18, 20, 23, 0.8);
+  margin-bottom: 40px;
+  padding-right: 4px;
 }
 
 .loginLi {
@@ -47,51 +43,51 @@ padding-right: 4px;
   margin-block-start: 0;
   margin-block-end: 0;
   font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 400;
-font-size: 14px;
-text-align: center;
-color: rgba(18, 20, 23, 0.8);
-margin-bottom: 46px;
-margin-top: 8px;
-
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  color: rgba(18, 20, 23, 0.8);
+  margin-bottom: 46px;
+  margin-top: 8px;
 }
 
 .form {
   border-radius: 25px 25px 0 0;
-width: 100%;
-max-width: 375px;
-/* height: 549px; */
-background-color: rgba(133, 170, 159, 0.1);
-padding: 32px 16px;
-/* display: flex;
+  width: 100%;
+  max-width: 375px;
+  /* height: 549px; */
+  background-color: rgba(133, 170, 159, 0.1);
+  padding: 32px 16px;
+  /* display: flex;
 flex-direction: column;
 align-items: center; */
 }
 
 .input {
   padding-block: 0;
-padding-inline: 0;
+  padding-inline: 0;
   margin-bottom: 14px;
   border: 1px solid rgba(18, 20, 23, 0.1);
-border-radius: 15px;
-padding: 16px 18px;
-width: 100%;
-height: 56px;
-
-
+  border-radius: 15px;
+  padding: 16px 18px;
+  width: 100%;
+  height: 56px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
 }
 
 .passwordInput {
   padding-block: 0;
-padding-inline: 0;
+  padding-inline: 0;
   border: 1px solid rgba(18, 20, 23, 0.1);
-border-radius: 15px;
-padding: 16px 18px;
-width: 100%;
-height: 56px;
-
-
-
+  border-radius: 15px;
+  padding: 16px 18px;
+  width: 100%;
+  height: 56px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
 }
 
 .eye {
@@ -113,34 +109,123 @@ height: 56px;
 .btn {
   margin-top: 32px;
   border-radius: 30px;
-padding-top: 16px;
-padding-bottom: 16px;
-width: 100%;
-height: 56px;
-font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.5;
-color: #fcfcfc;
-margin-bottom: 16px;
-background-color: #85aa9f;
-border: none;
-cursor: pointer;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  width: 100%;
+  height: 56px;
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fcfcfc;
+  margin-bottom: 16px;
+  background-color: #85aa9f;
+  border: none;
+  cursor: pointer;
 }
 
 .toggleP {
   font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.5;
-text-decoration: underline;
-text-decoration-skip-ink: none;
-color: rgba(18, 20, 23, 0.5);
-cursor: pointer;
-/* margin-left: 40vw; */
-/* display: block; */
-display: flex;
-justify-content: center;
-align-items: center;
-margin-bottom: 57px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: rgba(18, 20, 23, 0.5);
+  cursor: pointer;
+  /* margin-left: 40vw; */
+  /* display: block; */
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 57px; */
+}
+
+.lowerLi {
+  display: none;
+}
+
+.toggleDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 57px;
+}
+
+@media screen and (min-width: 768px) {
+  .img {
+    display: none;
+  }
+  .form {
+    margin-top: 140px;
+    max-width: 627px;
+    border-radius: 30px;
+    padding: 48px 64px;
+  }
+  .h {
+    font-size: 40px;
+    line-height: 120%;
+    margin-bottom: 20px;
+  }
+  .p {
+    font-size: 20px;
+    line-height: 150%;
+    margin-bottom: 32px;
+  }
+  .input {
+    margin-bottom: 18px;
+  }
+
+  .btn {
+    height: 60px;
+    font-size: 18px;
+    line-height: 156%;
+  }
+
+  .toggleDiv {
+    margin-bottom: 48px;
+  }
+
+  .lowerLi {
+    display: block;
+    font-family: "MacPaw Fixel Display", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: rgba(18, 20, 23, 0.8);
+    margin-top: 98px;
+    margin-bottom: 106px;
+  }
+
+  .loginLi {
+    display: none;
+  }
+
+  .blur {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    pointer-events: none;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .img {
+    display: block;
+    width: 498px;
+    height: 435px;
+  }
+  .genDiv {
+    flex-direction: row-reverse;
+    gap: 80px;
+  }
+
+  .lowerLi {
+    display: none;
+  }
+
+  .blur {
+    display: none;
+  }
 }
