--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -5,6 +5,22 @@
   cursor: pointer;
 }
 
+.userBarDiv {
+  display: flex;
+}
+
+.modal {
+  width: 185px;
+  height: 80%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #85aa9f;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 @media screen and (min-width: 768px) {
   .navIcon {
     width: 40px;
