--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -7,18 +7,42 @@
 
 .userBarDiv {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 8px;
+  margin-right: 16px;
+  margin-bottom: 74px;
+}
+
+.navLogDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  margin-left: 16px;
 }
 
 .modal {
   width: 185px;
-  height: 80%;
+  height: 100%;
   position: absolute;
   right: 0;
   top: 0;
   background-color: #85aa9f;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  border: none;
+  padding-top: 16px;
+}
+
+.modal:focus {
+  outline: none;
+}
+
+.closeIcon {
+  width: 32px;
+  height: 32px;
+  fill: #fcfcfc;
 }
 
 @media screen and (min-width: 768px) {
@@ -26,6 +50,26 @@
     width: 40px;
     height: 28px;
     stroke: #121417;
+  }
+
+  .modal {
+    width: 300px;
+    justify-content: flex-start;
+
+  }
+  .closeIcon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .userBarDiv {
+    margin-left: 24px;
+    margin-right: 32px;
+    margin-bottom: 170px;
+  }
+  .navLogDiv {
+    margin-left: 32px;
+    margin-bottom: auto;
   }
 }
 
