--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -3,7 +3,6 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  color: #121417;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -13,13 +12,29 @@
   margin-block-end: 0;
 }
 
+.nameModal {
+  color: #fcfcfc;
+}
+
+.nameHeader {
+  color: #121417;
+}
+
 .userIcon {
-  fill: rgba(252, 252, 252, 0.7);
-  background-color: #85aa9f;
   border-radius: 30px;
   width: 36px;
   height: 36px;
-  padding: 12px;
+  padding: 10px;
+}
+
+.userIconHeader {
+  fill: rgba(252, 252, 252, 0.7);
+  background-color: #85aa9f;
+}
+
+.userIconModal {
+  background-color: #fcfcfc;
+  fill: #85aa9f;
 }
 
 @media screen and (min-width: 768px) {
@@ -32,7 +47,7 @@
   .userIcon {
     width: 48px;
     height: 48px;
-    padding: 16px;
+    padding: 14px;
   }
 }
 
