--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -24,6 +24,7 @@
 .modal {
   width: 185px;
   height: 100%;
+  max-height: 812px;
   position: absolute;
   right: 0;
   top: 0;
@@ -55,6 +56,7 @@
   .modal {
     width: 300px;
     justify-content: flex-start;
+    max-height: 1024px;
 
   }
   .closeIcon {
