--- a/src/components/CustomSelect/CustomSelect.module.css
+++ b/src/components/CustomSelect/CustomSelect.module.css
@@ -1,6 +1,8 @@
 .genDiv {
 	position: relative;
-	min-width: 164px;
+	width: 100%;
+	max-width: 343px;
+	/* min-width: 250px; */
 	/* max-width: 189px; */
 }
 
@@ -70,4 +72,13 @@ display: flex;
 justify-content: center;
 align-items: center;
 padding: 0;
+}
+
+@media screen and (min-width:768px) {
+	.genDiv {
+		/* position: relative; */
+		min-width: 164px;
+		
+		/* max-width: 189px; */
+	}
 }
