--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,19 +1,94 @@
 .genDiv {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 228px;
 }
 
-
 .findInput {
-	border: 1px solid rgba(18, 20, 23, 0.1);
-	border-radius: 15px;
-	padding: 12px 24px;
-	width: 274px;
-	height: 48px;
+  border: 1px solid rgba(18, 20, 23, 0.1);
+  border-radius: 15px;
+  padding: 12px 24px;
+  width: 274px;
+  height: 48px;
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #121417;
+}
 
-	font-family: "MacPaw Fixel Display", sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-color: #121417;
+.trainUl {
+  display: flex;
+  row-gap: 8px;
+  column-gap: 16px;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-block-start: 0;
+    margin-block-end: 0;
+    
+    padding-inline-start: 0;
+}
+
+.studyLi {
+  display: flex;
+  gap: 8px;
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgba(18, 20, 23, 0.5);
+  align-items: baseline;
+}
+
+.studyP {
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  color: #121417;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.trainLink {
+  text-decoration: none;
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #121417;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.wordButton {
+  font-family: "MacPaw Fixel Display", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #121417;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  display: flex;
+  gap: 8px;
+  align-items:center;
+  padding-block: 0;
+  padding-inline: 0;
+}
+
+.iconPlus {
+  width: 22px;
+  height: 22px;
+  fill: #85aa9f;
+}
+
+.iconArrow {
+  width: 20px;
+  height: 20px;
+  stroke: #85aa9f;
+  stroke-width: 1.5px;
 }
