--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -3,13 +3,17 @@
   flex-wrap: wrap;
   gap: 8px;
   align-items: center;
+  /* margin-bottom: 14px; */
 }
 
 .findInput {
   border: 1px solid rgba(18, 20, 23, 0.1);
   border-radius: 15px;
   padding: 12px 24px;
-  width: 274px;
+  width: 100%;
+  max-width: 343px;
+  /* min-width: 250px; */
+  /* min-width: none; */
   height: 48px;
 
   font-family: "MacPaw Fixel Display", sans-serif;
@@ -31,3 +35,11 @@
   cursor: pointer;
 }
 
+@media screen and (min-width:768px) {
+
+  .findInput {
+    width: 274px;
+  }
+  
+  
+}
