--- a/src/components/CustomSelect/CustomSelect.module.css
+++ b/src/components/CustomSelect/CustomSelect.module.css
@@ -77,7 +77,10 @@ padding: 0;
 @media screen and (min-width:768px) {
 	.genDiv {
 		/* position: relative; */
+		width:unset;
 		min-width: 164px;
+		/* max-width: 221px; */
+		
 		
 		/* max-width: 189px; */
 	}
