--- a/src/pages/DictionaryPage/Dictionary.module.css
+++ b/src/pages/DictionaryPage/Dictionary.module.css
@@ -4,6 +4,9 @@
 	padding-top: 32px;
 	padding-left: 16px;
 	padding-right: 16px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 @media screen and (min-width:768px) {
