--- a/src/pages/DictionaryPage/Dictionary.module.css
+++ b/src/pages/DictionaryPage/Dictionary.module.css
@@ -1,30 +1,28 @@
-
 .genDiv {
-	background-color: rgba(248, 248, 248, 1);
-	padding-top: 32px;
-	padding-left: 16px;
-	padding-right: 16px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  background-color: rgba(248, 248, 248, 1);
+  padding-top: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@media screen and (min-width:768px) {
-	.genDiv {
-		/* background-color: rgba(248, 248, 248, 1); */
-		padding-top: 80px;
-		padding-left: 32px;
-		padding-right: 32px;
-	}
+@media screen and (min-width: 768px) {
+  .genDiv {
+    /* background-color: rgba(248, 248, 248, 1); */
+    padding-top: 80px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 }
 
-
-@media screen and (min-width:1440px) {
-	.genDiv {
-		/* background-color: rgba(248, 248, 248, 1); */
-		/* padding-top: 80px; */
-		padding-left: 100px;
-		padding-right: 100px;
-	}
+@media screen and (min-width: 1440px) {
+  .genDiv {
+    /* background-color: rgba(248, 248, 248, 1); */
+    /* padding-top: 80px; */
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 48px;
+  }
 }
-
